[package]
name = "screenshot_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
fs2 = "0.4"
glob = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
sha2 = "0.10"
hex = "0.4"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}